[build-system]
requires = ["setuptools", "wheel", "numpy", "Cython", "scipy"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
